// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> displays selected indicator when isSelected is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ced4da",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 8,
        "marginRight": 8,
        "padding": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#ced4da",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "height": 12,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 12,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#007bff",
            "borderRadius": 8,
            "height": 8,
            "width": 8,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "#007bff",
          "fontSize": 16,
        }
      }
    >
      Option
    </Text>
  </View>
</View>
`;

exports[`<RadioButton /> does not display selected indicator when isSelected is false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ced4da",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 8,
        "marginRight": 8,
        "padding": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#ced4da",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "height": 12,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 12,
        }
      }
    />
    <Text
      style={
        {
          "color": "#007bff",
          "fontSize": 16,
        }
      }
    >
      Option
    </Text>
  </View>
</View>
`;

exports[`<RadioButton /> renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ced4da",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 8,
        "marginRight": 8,
        "padding": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#ced4da",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "height": 12,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 12,
        }
      }
    />
    <Text
      style={
        {
          "color": "#007bff",
          "fontSize": 16,
        }
      }
    >
      Option
    </Text>
  </View>
</View>
`;
